--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -2,6 +2,8 @@ ARG BASE_IMAGE
 
 FROM $BASE_IMAGE
 
+RUN apt-get update && apt-get install -y libgtk2.0-dev
+
 ENV PYTHON_PACKAGES="\
     numpy \
     matplotlib \
@@ -12,6 +14,8 @@ ENV PYTHON_PACKAGES="\
     seaborn \
     keras \
     tensorflow \
+    opencv-contrib-python \
+    imutils \
     tqdm \
 " 
 
