--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,22 +5,24 @@ certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
 gast==0.3.3
-google-auth==1.12.0
+google-auth==1.13.1
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
-grpcio==1.27.2
+grpcio==1.28.1
 h5py==2.10.0
 idna==2.9
+imutils==0.5.3
 joblib==0.14.1
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
+kiwisolver==1.2.0
 Markdown==3.2.1
 matplotlib==3.2.1
 nltk==3.4.5
 numpy==1.18.2
 oauthlib==3.1.0
+opencv-contrib-python==4.2.0.34
 opt-einsum==3.2.0
 pandas==1.0.3
 protobuf==3.11.3
@@ -42,7 +44,7 @@ tensorboard-plugin-wit==1.6.0.post2
 tensorflow==2.2.0rc2
 tensorflow-estimator==2.2.0rc0
 termcolor==1.1.0
-tqdm==4.44.0
+tqdm==4.45.0
 urllib3==1.25.8
-Werkzeug==1.0.0
+Werkzeug==1.0.1
 wrapt==1.12.1
