--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ PROJECT_NAME=image_classification_examples
 
 #Python
 PYTHON_TAG=3.8.2-slim-buster
+
+#R
+TIDYVERSE_TAG=3.6.3
+R_STUDIO_USER=user
+R_STUDIO_PASSWORD=pass
+R_STUDIO_PORT=8787
